Created utility to export metrics onto excel file or txt